# onnx_inference

./: .gitignore  CMakeLists.txt  main.cpp  policy.onnx
include/: inference.h
models/: policy_200_accxyz.onnx  policy_200_rospid_smooth.onnx  policy_200_rospid_smooth_tanhpos.onnx  policy_300.onnx  policy_300_18_5.onnx  policy_300_6D.onnx  policy_300_armature.onnx  policy_300_armature_actionscale.onnx  policy_300_armature_actionscale_penalty.onnx  policy_300_armature_noise.onnx  policy_300_highvf.onnx  policy_300_limiteffort.onnx  policy_300_lockrot.onnx  policy_300_lockrot_gravity.onnx  policy_300_lockrot_gravity_angpen.onnx  policy_300_newcurrv2.onnx  policy_300_newquat.onnx  policy_300_newquat_currv2_highprox.onnx  policy_300_newquat_v2.onnx  policy_300_newquat_v2_curr.onnx  policy_300_rospid.onnx  policy_300_rospid_smooth_tanhpos.onnx  policy_300_tunedgains.onnx  policy_300_tunedgains_quat.onnx  policy_300_tunedgains_rotmatrix.onnx  policy_300_tunedgains_scaledrew.onnx  policy_300_v2_NA.onnx  policy_300_v2_NA_1.onnx  policy_300_v2_stunt_dynamick.onnx  policy_300_v3.onnx  policy_300_v3_A.onnx  policy_300_v3_A_actionsmooth.onnx  policy_300_v3_A_actionsmooth_0.onnx  policy_300_v3_A_actionsmooth_lowk.onnx  policy_300_v3_A_v1.onnx  policy_300_v3_A_v1_k75.onnx  policy_300_v3_NA.onnx  policy_v3_A_GEO.onnx  policy_v3_A_INDI.onnx  policy_v3_A_INDI_GEO.onnx  (+83 more)
src/: inference.cpp
